Last minute changes

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
                     <h1>Welcome to my portfolio</h1>
                     <p>
                         My name is Alex Ward, a 3rd year Interaction design and Information Systems student. This Web
-                        portfolio contains a collection of my original works and projects (all work that isn’t mine has been credited in their
+                        portfolio contains a collection of my original works and projects (all work that isn’t mine has
+                        been credited in their
                         respective pages). As a designer I specialize in UX and Web design, aiming to explore
-                        the fundamentals of UX and Web design through both study and work experience. In the future I hope to
+                        the fundamentals of UX and Web design through both study and work experience. In the future I
+                        hope to
                         complete many more works which will be displayed here.<br><br>
-                        Email: <a href="mailto:alexward103@gmail.com" target="_blank">alexward103@gmail.com</a> LinkedIn: <a
-                            href="https://www.linkedin.com/in/alex-ward-032b441b6/" target="_blank">Alex Ward</a><br><br>
+                        Email: <a href="mailto:alexward103@gmail.com" target="_blank">alexward103@gmail.com</a>
+                        LinkedIn: <a href="https://www.linkedin.com/in/alex-ward-032b441b6/" target="_blank">Alex
+                            Ward</a><br><br>
                         <i>This website is a work in progress.</i>
                     </p>
                 </section>
@@ -93,7 +96,7 @@
 
             </div>
 
-            <article class="card-container UX dnone tiles">
+            <div class="card-container UX dnone tiles">
 
 
                 <a href="rym.html" class=" card-link">
@@ -132,7 +135,7 @@
                         <p>Figma, Adobe Illustrator</p>
                     </div>
                 </a>
-            </article>
+            </div>
         </div>
     </main>
 
