Update exploring html

--- a/exploring.html
+++ b/exploring.html
@@ -47,7 +47,8 @@
                         part of this project was it having to be completely responsive, allowing for full viewing at
                         mobile and ipad viewports. For the website’s content I chose to go with a stylistic cartoon
                         style and I chose to do locations around QUT for convenience. This project enforced the use of
-                        creative CSS use and a lot of accessible content such as skip link and breadcrumbs.
+                        creative CSS use and a lot of accessible content such as skip link and breadcrumbs.<br><br>
+                        You can view this project at <a href="http://alexwportfolio.com/ExploringQUT/" target="_blank">http://alexwportfolio.com/ExploringQUT/</a>
                     </p>
                 </section>
             </div>
