--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <section class="about-text">
                     <h1>Welcome to my portfolio</h1>
                     <p>
-                        My name is Alex Ward, a 3rd year Interaction design and Information Systems student. This Web
+                        My name is Alex Ward, a Final year Interaction design and Information Systems student. This Web
                         portfolio contains a collection of my original works and projects (all work that isn’t mine has
                         been credited in their
                         respective pages). As a designer I specialize in UX and Web design, aiming to explore
