--- a/p5js.html
+++ b/p5js.html
@@ -44,17 +44,15 @@
                         <br><br>
                         Task 1: Active Drawing. 
                         <br>
-                        This project allows the user to create a long line by holding down mouse 1 in any direction that changes colour every time it collides wih itself. I was inspired by the retro games like Tron and Snake to use 
-                        Collision and gamification to create a fun and unique drawing tool. Task 1 can be seen here: <a href="https://editor.p5js.org/Award151/full/neqpINQNw" target="_blank">https://editor.p5js.org/Award151/full/neqpINQNw</a>
+                        This project allows the user to create a long line by holding down mouse 1 in any direction that changes colour every time it collides wih itself. Task 1 can be seen here: <a href="https://editor.p5js.org/Award151/full/neqpINQNw" target="_blank">https://editor.p5js.org/Award151/full/neqpINQNw</a>
                         <br><br>
                         Task 2: Recombonation Effects. 
                         <br>
-                        For task two i wanted to explore recombination effects within p5js to create a small game in which the user is given a limited screen space to find ghosts and capture them. 
-                        This was able to be achieved through experementation with blending techniques, specifically, the darken effect. Task 2 can be seen here: <a href="https://editor.p5js.org/Award151/full/eQYWSqZqk" target="_blank">https://editor.p5js.org/Award151/full/eQYWSqZqk</a>
+                        For task two I wanted to explore recombination effects within p5js to create a small game in which the user is given a limited screen space to find ghosts and capture them. Task 2 can be seen here: <a href="https://editor.p5js.org/Award151/full/eQYWSqZqk" target="_blank">https://editor.p5js.org/Award151/full/eQYWSqZqk</a>
                         <br><br>
                         Task 3: Final Assessment
                         <br>
-                        Task 3 is a much larger piece than the last two tasks, and is presented as an interactivve visualiser for a piece of music. THe piece i chose is in recognition of Ween's "The mollusk". 
+                        Task 3 is presented as an interactive visualiser for a piece of music. The piece I chose is in relation to Ween's "The Mollusk". 
                         As the user plays the code they can see that the sunrays align with the beat, the waves move with the volume and the clam syncs up with the keyboard part of the song. All this is done through beat and noise detection 
                         rather than hardcoding movement. Task 3 can be seen here: <a href="https://editor.p5js.org/Award151/full/O3sEoKhbA" target="_blank">https://editor.p5js.org/Award151/full/O3sEoKhbA</a>
                         
