Fixed image pjs

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </a>
              <a href="p5js.html" class="card-link">
-                    <article class="card p5js">
+                    <article class="card pjs">
                         <div class="section-text">
                             <h3>p5.Js Creative Coding Porject</h3>
                             <p>JavaScript</p>
