--- a/p5js.html
+++ b/p5js.html
@@ -29,7 +29,7 @@
             <div class="PROJECT card-container">
                 <div id="image-container">
                     <img src="img/Mollusk.PNG" alt="Screenshot of Task 3: Final Assessment" class="project-img img-focus" onclick="swap(1)" id="1">
-                    <img src="img/Tron.PNG" alt="Screenshot of Task 1: Active Drawing" class="project-img" onclick="swap(2)" id="2">
+                    <img src="img/tron.PNG" alt="Screenshot of Task 1: Active Drawing" class="project-img" onclick="swap(2)" id="2">
                     <img src="img/ghost.PNG" alt="Screenshot of Task 2: Recombination Effects" class="project-img" onclick="swap(3)" id="3">
 
 
