--- a/p5js.html
+++ b/p5js.html
@@ -42,15 +42,15 @@
                     <p>
                         The p5js Creative Coding Project is a collection of code snippets that all use the p5js JavaScript Library in creative ways:
                         <br><br>
-                        Task 1: Active Drawing. 
+                        <b> 1: Active Drawing. </b>
                         <br>
                         This project allows the user to create a long line by holding down mouse 1 in any direction that changes colour every time it collides wih itself. Task 1 can be seen here: <a href="https://editor.p5js.org/Award151/full/neqpINQNw" target="_blank">https://editor.p5js.org/Award151/full/neqpINQNw</a>
                         <br><br>
-                        Task 2: Recombonation Effects. 
+                        <b>Task 2: Recombonation Effects. </B>
                         <br>
                         For task two I wanted to explore recombination effects within p5js to create a small game in which the user is given a limited screen space to find ghosts and capture them. Task 2 can be seen here: <a href="https://editor.p5js.org/Award151/full/eQYWSqZqk" target="_blank">https://editor.p5js.org/Award151/full/eQYWSqZqk</a>
                         <br><br>
-                        Task 3: Final Assessment
+                        <b>Task 3: Final Assessment</b>
                         <br>
                         Task 3 is presented as an interactive visualiser for a piece of music. The piece I chose is in relation to Ween's "The Mollusk". 
                         As the user plays the code they can see that the sunrays align with the beat, the waves move with the volume and the clam syncs up with the keyboard part of the song. All this is done through beat and noise detection 
