CHAGNED to capitals

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SynthEasel</title>
+    <title>SYNTHEASEL</title>
     <link rel="icon" type="image/x-icon" href="/img/SE.svg">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -17,7 +17,7 @@
       <div id="load2"></div>
     <main id="home">
         <div id="About" class="foreground">
-          <h1>Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">Synth</span><span style="color: #EF6464; font-size: 1.3em;">Easel</span></h1>
+          <h1>Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">SYNTH</span><span style="color: #EF6464; font-size: 1.3em;">EASEL</span></h1>
           <img src="img/SE.svg" alt="SynthEasel Logo" id="logo">
           <article>
              <p>SynthEasel is an innovative interactive drawing tool that lets you craft diverse and unique visual creations
