--- a/draw.html
+++ b/draw.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SynthEasel - Draw</title>
+    <title>SYNTHEASEL - Draw</title>
     <link rel="icon" type="image/x-icon" href="/img/SE.svg">
     <link rel="stylesheet" href="style.css">
   </head>
