Changed the song codes and added loading text

--- a/draw.html
+++ b/draw.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div id="load"></div>
-      <div id="load2"></div>
+      <div id="load">
+      </div>
+      <div id="load2">
+      </div>
       <div id="startSong">
         <div id="clickBox" onclick="startDraw()">
           <h1>Press to start song</h1>
