--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body >
-      <div id="load"></div>
-      <div id="load2"></div>
+      <div id="load">
+        <p id="loadT">. SYNTHEASEL</p> 
+      </div>
+    
+      <div id="load2">
+        <p id="load2T">Now Loading..</p> 
+      </div>
     <main id="home">
         <div id="About" class="foreground">
           <h1>Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">SYNTH</span><span style="color: #EF6464; font-size: 1.3em;">EASEL</span></h1>
@@ -24,7 +29,7 @@
               through the power of music! Let your imagination run wild on the digital canvas. Whether you're an experienced artist 
               or just looking to unwind and explore your creative side, SynthEasel promises an enthralling and personalized artistic 
               adventure with every click of your mouse or tap of your finger. <strong>To start your artistic journey with SynthEasel, simply pick any 
-              song from the list below</strong>
+              song from the list below and click on its title!</strong>
           </p>
           </article>
         </div>
