--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
       </div>
     <main id="home">
         <div id="About" class="foreground">
-          <h1>Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">SYNTH</span><span style="color: #EF6464; font-size: 1.3em;">EASEL</span></h1>
+          <div style="display: flex; justify-content: center;">
+          <h1 style="padding-right: 0%;">Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">SYNTH</span><span style="color: #EF6464; font-size: 1.3em;">EASEL</span></h1>
           <img src="img/SE.svg" alt="SynthEasel Logo" id="logo">
+        </div>
           <article>
              <p>SynthEasel is an innovative interactive drawing tool that lets you craft diverse and unique visual creations
-              through the power of music! Let your imagination run wild on the digital canvas. Whether you're an experienced artist 
+              through the power of music! Whether you're an experienced artist 
               or just looking to unwind and explore your creative side, SynthEasel promises an enthralling and personalized artistic 
-              adventure with every click of your mouse or tap of your finger. <strong>To start your artistic journey with SynthEasel, simply pick any 
-              song from the list below and click on its title!</strong>
+              adventure with every click of your mouse or tap of your finger. 
           </p>
+          <div style="display: flex; align-items: center; justify-content: center;"><p><strong>To start your artistic journey with SynthEasel, simply click on
+               <span style="color: #EF6464;">Draw Icon!</span></strong></p>
+              <img style="display:inline; ;height: 1.3em; width: 1.3em;" src="img/Draw.svg"></div>
           </article>
         </div>
         <div id = "lower">
