--- a/index.html
+++ b/index.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SYNTHEASEL</title>
-    <link rel="icon" type="image/x-icon" href="/img/SE.svg">
-    <link rel="stylesheet" href="style.css">
-  </head>
-<body >
-      <div id="load">
-        <p id="loadT">. SYNTHEASEL</p> 
-      </div>
+    <title>alexWPortfolio.com</title>
+    <link rel="stylesheet" href="styles.css">   
+</head>
+<body id="home">
+
+    <nav>
+        <hr>
+        <h1>alexWPortfolio.com</h1>
+        <ul>
+            <li class="underline-on-hover" onclick="window.location='mailto:alexward103@gmail.com';"><object data="assets/img/mail.svg" type="image/svg+xml"></object>Mail</li>
+            <p>.</p>
+            <li class="underline-on-hover" onclick='window.location="https://www.linkedin.com/in/alex-ward-032b441b6/";'><object data="assets/img/linkedin.svg" type="image/svg+xml"></object>LinkedIn</li>
+            <p>.</p>
+            <li class="underline-on-hover" onclick="window.location='https://github.com/AWARD220';"><object data="assets/img/github.svg" type="image/svg+xml"></object>Github</li>
+        </ul>
+    </nav>
     
-      <div id="load2">
-        <p id="load2T">Now Loading..</p> 
-      </div>
-    <main id="home">
-        <div id="About" class="foreground">
-          <div style="display: flex; justify-content: center;">
-          <h1 style="padding-right: 0%;">Welcome to <br><span style="color: #8066E3; font-size: 1.3em;">SYNTH</span><span style="color: #EF6464; font-size: 1.3em;">EASEL</span></h1>
-          <img src="img/SE.svg" alt="SynthEasel Logo" id="logo">
-        </div>
-          <article>
-             <p>SynthEasel is an innovative interactive drawing tool that lets you craft diverse and unique visual creations
-              through the power of music! Whether you're an experienced artist 
-              or just looking to unwind and explore your creative side, SynthEasel promises an enthralling and personalized artistic 
-              adventure with every click of your mouse or tap of your finger. 
-          </p>
-          <div style="display: flex; align-items: center; justify-content: center;"><p><strong>To start your artistic journey with SynthEasel, simply click on
-               <span style="color: #EF6464;">Draw Icon!</span></strong></p>
-              <img style="display:inline; ;height: 1.3em; width: 1.3em;" src="img/Draw.svg"></div>
-          </article>
-        </div>
-        <div id = "lower">
-        <div id="SongSelect" class="background"></div>
-        <div id="sketch-container"></div>
-        </div>
-        
+    <main>
+         <table>
+            <tr>
+                <th>Project</th>
+                <th>Date</th>
+                <th>Type</th>
+            </tr>
+            <tr class="underline-on-hover" onclick="window.location='catify.html';">
+                <td>catify.site</td>
+                <td>03 - 2024</td>
+                <td>Web Appliction</td>
+            </tr>
+            <tr class="underline-on-hover" onclick="window.location='syntheasel.html';">
+                <td>SYNTHEASEL</td>
+                <td>11 - 2023</td>
+                <td>Web Appliction</td>
+            </tr>
+        </table>
     </main>
-    <script src="fadeload.js"></script>
-    <script src="dots.js"></script>
-    <script src="key.js"></script>
-    <script src="songCards.js"></script>
+    <footer>
+       <a  class="underline-on-hover" href="https://github.com/AWARD220/AWARD220.github.io"> Alex Ward @ 2024 </a>
+    </footer>
+
+
 </body>
+</html>
