--- a/syntheasel.html
+++ b/syntheasel.html
@@ -34,7 +34,7 @@
                 <br><br>
                 SYNTHEASEL is an interactive music visualization web application that bridges the gap between music and visual art. By enabling users to create personalized visualizations, it adds a new dimension to the music experience. Each interaction is a journey of self-expression and exploration, fostering a deeper connection between users and the music they love.
                 <br><br>
-                <a  href="https://interaction.2023.qutdesignfestival.com.au/projects/syntheasel/">Check out the Festival Entry Here!</a>
+                <a  href="https://interaction.2023.qutdesignfestival.com.au/projects/syntheasel/">Check out the QUT Design Festival Entry Here!</a>
             </p>
             </section>
         <div class="images">
