--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="styles.css">   
 </head>
 <body id="home">
-
+    <div class = "left">
     <nav>
-        <hr>
         <h1>alexWPortfolio.com</h1>
         <ul>
             <li class="underline-on-hover" onclick="window.location='mailto:alexward103@gmail.com';"><object data="assets/img/mail.svg" type="image/svg+xml"></object>Mail</li>
@@ -42,6 +41,7 @@
     <footer>
        <a  class="underline-on-hover" href="https://github.com/AWARD220/AWARD220.github.io"> Alex Ward @ 2024 </a>
     </footer>
+    </div>
 
 
 </body>
